daemonSetCustomNodeSettingsWithReqLimits.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: kube-system
  name: node-custom-setup
  labels:
    k8s-app: node-custom-setup
spec:
  selector:
    matchLabels:
      k8s-app: node-custom-setup
  template:
    metadata:
      labels:
        k8s-app: node-custom-setup
    spec:
      hostPID: true
      hostNetwork: true
      containers:
      - name: wait
        image: k8s.gcr.io/pause:3.1
        resources:
          requests:
            memory: "8Mi"
            cpu: "50m"
          limits:
            memory: "16Mi"
            cpu: "100m"
